# iced_bar

./: Cargo.toml  flake.nix  notes
src/: audio_listener.rs  base.rs  color.rs  fancy_drawer.rs  launch.rs  main.rs  model.rs  terminal.rs
