[package]
name = "iced-bar"
version = "0.1.0"
edition = "2024"

[dependencies]
battery = "0.7.8"
chrono = "0.4.44"
iced = { version = "0.14.0", default-features = false, features = ["smol", "wayland", "wgpu", "crisp", "linux-theme-detection", "web-colors"] }
iced_anim = "0.3.1"
iced_layershell = "0.18.1"
libpulse-binding = "2.30.1"
smol = "2.0.2"
