[package]
name = "iced-bar"
version = "0.1.0"
edition = "2024"

[dependencies]
battery = "0.7.8"
chrono = "0.4.44"
futures = "0.3.32"
iced = { version = "0.14.0", default-features = false, features = ["wayland", "wgpu", "crisp", "linux-theme-detection", "web-colors", "canvas", "tokio"] }
iced_anim = "0.3.1"
iced_layershell = "0.18.1"
iced_renderer = "0.14.0"
iced_term = "0.8.0"
itertools = "0.14.0"
libpulse-binding = "2.30.1"
once_cell = "1.21.4"
tokio = { version = "1.52.3", features = ["sync"] }
tokio-stream = "0.1.18"
wgpu = "29.0.3"
